<resources>
    <string name="app_name">Click \'n Drink</string>
    <string name="text">Welcome</string>
    <string name="send">Send</string>
    <string name="button">Send</string>
    <string name="profile_name">John Doe</string>
    <string name="role">Administrator</string>
    <string name="home">home</string>
    <string name="event">events</string>
    <string name="search">discover</string>
    <string name="settings">settings</string>
    <string name="profile">profile</string>
    <string name="logout">logout</string>
    <string name="email">johndoe@gmail.com</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="country_prompt">Choose a country</string>
    <string-array name="country_arrays">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Kenya</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>
    <string name="motto">Drink Responsibly</string>
    <string name="vision">A technology and retail platform that empowers you to revitalise your day by ordering beverages at the touch of a button. </string>
    <string name="mission">Constantly create motivation within one’s career and personal life. Challenging you to #NeverSettle, we want our RAGEr’s to challenge the status quo. Build sustaining relationships with your friends and colleagues or within your community and environment. We want you to reinvent yourself: Break away from who you think you are and push yourself to become better and unlabel yourself. Besides drinks, revitalise yourself through refreshing perspectives and ideas.</string>
    <string name="background">Deadlines, long working hours, your boss who keeps loading more on your plate - we get it...life constraints can sometimes weigh you down, and the one thing that’ll keep you going that little bit longer is a drink to satisfy your needs.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
