<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_baseline_home_24px"
            android:title="@string/home" />

        <item
            android:id="@+id/event"
            android:icon="@drawable/ic_baseline_event_24px"
            android:title="@string/event" />

        <item
            android:id="@+id/search"
            android:icon="@drawable/ic_search_24px"
            android:title="@string/search" />

        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_baseline_account_24px"
            android:title="@string/profile" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_baseline_settings_20px"
            android:title="@string/settings" />
    </group>

    <item android:title="More">
        <menu>
            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_baseline_activity_24px"
                android:title="about" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_baseline_exit_24px"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>