<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".activities.SplashActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/grad" />

            <ImageView
                android:layout_width="200sp"
                android:layout_height="200sp"
                android:layout_centerHorizontal="true"
                android:padding="10sp"
                android:src="@drawable/titl" />

            <TextView
                android:id="@+id/tit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="190dp"
                android:letterSpacing="0.1"
                android:text="@string/motto"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tit"
                android:layout_marginTop="10sp"
                android:padding="10sp"
                android:text="Background :"
                android:textColor="#20B30F"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/backgroundtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/back"
                android:fontFamily="sans-serif-light"
                android:padding="15sp"
                android:text="@string/background"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/vis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/backgroundtext"
                android:layout_marginTop="10sp"
                android:fontFamily="sans-serif-light"
                android:padding="10sp"
                android:text="Vision :"
                android:textColor="#20B30F"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/vistext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/vis"
                android:fontFamily="sans-serif-light"
                android:padding="15sp"
                android:text="@string/vision"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/vistext"
                android:layout_marginTop="10sp"
                android:padding="10sp"
                android:text="Benefits :"
                android:textColor="#20B30F"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mistext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mis"
                android:padding="15sp"
                android:text="@string/mission"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>